apps/credit-initiation/credit-initiation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-initiation
  labels:
    app: credit-initiation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit-initiation      
  template:
    metadata:
      labels:
        app: credit-initiation        
    spec:
      containers:
        - name: credit-initiation
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
