apps/credit-initiation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-initiation
  labels:
    app.kubernetes.io/name: credit-initiation
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: credit-initiation
